--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="ondegastei">
     <head>
+           <base href="/">
         <meta charset="utf8"/>
         <meta name="viewport" content="width=device-width, user-scalable=no"/>
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
@@ -15,7 +16,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-resource.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-route.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-google-chart/0.1.0/ng-google-chart.min.js" type="text/javascript"></script>
     <script src="/assets/js/scripts.js"></script>
     <script src="/app/app.js"></script>
     <script src="/app/controllers/dashboard.js"></script>
+    <script src="/app/controllers/graficos.js"></script>
+    <script src="/app/controllers/pageheader.js"></script>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 </html>
+
+
