--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto:400,700,300">
+        <link rel="stylesheet" type="text/css" href="/assets/css/login.css">
         <title>Onde eu gastei?</title>
     </head>
     <body>
@@ -22,7 +23,9 @@
     <script src="/app/app.js"></script>
     <script src="/app/controllers/dashboard.js"></script>
     <script src="/app/controllers/graficos.js"></script>
+    <script src="/app/controllers/logar.js"></script>
     <script src="/app/controllers/pageheader.js"></script>
+    <script src="/app/controllers/novousuario.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 </html>
 
