--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-google-chart/0.1.0/ng-google-chart.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-maskmoney/3.0.2/jquery.maskMoney.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
+    <script src="/assets/js/jquery.ui.widget.js"></script>
+    <script src="/assets/js/jquery.iframe-transport.js"></script>
+    <script src="/assets/js/jquery.fileupload.js"></script>
     <script src="/assets/js/scripts.js"></script>
     <script src="/app/app.js"></script>
     <script src="/app/controllers/dashboard.js"></script>
@@ -28,6 +31,7 @@
     <script src="/app/controllers/logar.js"></script>
     <script src="/app/controllers/pageheader.js"></script>
     <script src="/app/controllers/novousuario.js"></script>
+    <script src="/app/controllers/ofximport.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 </html>
 
