--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto:400,700,300">
         <link rel="stylesheet" type="text/css" href="/assets/css/login.css">
-        <title>Onde eu gastei?</title>
+        <title>Expense</title>
     </head>
     <body>
         <ng-view></ng-view>
@@ -32,7 +32,7 @@
     <script src="/app/controllers/pageheader.js"></script>
     <script src="/app/controllers/novousuario.js"></script>
     <script src="/app/controllers/ofximport.js"></script>
+    <script src="/app/controllers/contas.js"></script>
+    
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 </html>
-
-
