--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto:400,700,300">
         <link rel="stylesheet" type="text/css" href="/assets/css/site.css">
         <link rel="stylesheet" type="text/css" href="/assets/css/login.css">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <title>Expense</title>
     </head>
     <body>
